<resources>
    <string name="app_name">CleanCycleGUI</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Routes</string>
    <string name="search_hint">Search</string>
    <string name="radio_pollution_only">Pollution only</string>
    <string name="radio_avoid_pollution">Avoid pollution</string>
    <string name="radio_distance_only">Distance only</string>
    <string name="radio_mixed_1">Mixed 1</string>
    <string name="radio_mixed_2">Mixed 2</string>
    <string name="radio_mixed_3">Mixed 3</string>
    <string name="route_name_alert_title">Name your route</string>
    <string name="saved_route_delete_title">Delete this route?</string>
    <string name="save_route_button_text">Save route</string>
    <string name="save_error_same_name">Failed to save route as one with this name already exists.</string>
    <string name="cache_nodes">cached_nodes.obj</string>
    <string name="cache_edges">cached_edges.obj</string>
</resources>
